--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ interpretations is  Carcharodon Megalodon</div><br><br>
 <table align="center">
   <tbody>
   <TR>
-    <td><img width="400" height="300" alt="" src="megalodon1.jpg" 
+    <td><img width="400" height="300" alt="" src="img/megalodon1.jpg" 
     border="0"></TD>
-    <td><img width="400" height="300" alt="" src="megalodon2.jpg" 
+    <td><img width="400" height="300" alt="" src="img/megalodon2.jpg" 
     border="0"></td></tr></tbody></table>
 <section>
 <h3>According to Renaissance accounts, gigantic, triangular fossil teeth often  
@@ -32,7 +32,7 @@ interpretations is  Carcharodon Megalodon</div><br><br>
  teeth. He described his findings in the book The Head of a Shark Dissected,  
  which also contained an illustration of a. Swiss naturalist Louis Agassiz gave  
  the shark its initial scientific name, Carcharodon megalodon, in 1835, in his  
- research work Recherché sur les poisons fossils[ Research on fossil fish, which 
+ research work RecherchÃ© sur les poisons fossils[ Research on fossil fish, which 
   he completed in 1843. megalodon teeth are morphologically similar to the teeth 
   of the great white shark, and on the basis of this observation, Agassiz  
  assigned. megalodon to the genus Carcharodon. While the scientific name is.  
